[package]
name = "rust_voronoi_planet"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Voronoi-based planet mesh generation for games and simulations"
keywords = ["voronoi", "procedural", "planet", "mesh", "terrain"]
categories = ["game-development", "graphics", "algorithms"]

[dependencies]
glam = "0.30"
rand = "0.8"
rand_chacha = "0.3"
parry3d = "0.17"
kiddo = { version = "5.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["spatial-index"]
spatial-index = ["kiddo"]
serde = ["dep:serde", "glam/serde"]
